# open-anonymizer

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml
.github/workflows/: ci.yml  cleanup-ghcr-package.yml  package-artifacts.yml  release.yml
docs/: macos-distribution.md  pdf-test-matrix.md  windows-distribution.md
pyinstaller_hooks/: hook-PySide6.QtGui.py
scripts/: assemble_release_metadata.py  build_desktop.py  build_macos_dmg.py  build_windows_installer.py  capture_readme_screenshot.py  create_release_archive.py  prepare_web_release.py  run_pdf_corpus.py  stage_tesseract_runtime.py
src/open_anonymizer/: __main__.py  branding.py  main.py
src/open_anonymizer/models/: __init__.py  documents.py
src/open_anonymizer/services/: __init__.py  backend_runtime.py  configured_matching.py  deduce_backend.py  deidentifier.py  exporter.py  formatter.py  importer.py  ocr_runtime.py  smart_pseudonymizer.py  workers.py
src/open_anonymizer/ui/: anonymization_dialog.py  drop_area.py  main_window.py  processing_text_edit.py
tests/: conftest.py  helpers.py  test_anonymization_dialog.py  test_assemble_release_metadata.py  test_branding.py  test_build_desktop.py  test_build_macos_dmg.py  test_build_windows_installer.py  test_configured_matching.py  test_deduce_backend.py  test_deduce_backend_cleanup.py  test_deidentifier.py  test_exporter.py  test_importer.py  test_main.py  test_ocr_runtime.py  test_pdf_corpus_harness.py  test_prepare_web_release.py  test_stage_tesseract_runtime.py  test_ui_smoke.py
tests/corpus/: starter_manifest.json
