[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-anonymizer"
version = "0.1.0"
description = "A local desktop app for de-identifying medical text with belgian-deduce."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Stig Hellemans" }
]
dependencies = [
  "PySide6>=6.6,<6.8",
  "pypdf>=5.7,<6",
  "pypdfium2>=4.30,<5",
  "belgian-deduce @ git+https://github.com/stighellemans/belgian-deduce.git@eabc0ff6d5a5af19f76a013055ec56c857a676ab",
]

[project.optional-dependencies]
dev = [
  "PyInstaller>=6.3,<7",
  "pytest>=8.0,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
open-anonymizer = "open_anonymizer.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"open_anonymizer.assets" = ["*.svg", "*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
